:bug: 메인페이지 메뉴 버튼에 wrap이 없어서 가로 스트롤리 생기는 문제

--- a/src/resources/styles/components/list/_card.scss
+++ b/src/resources/styles/components/list/_card.scss
@@ -3,6 +3,7 @@
 
   display: flex;
   list-style: none;
+  flex-wrap: wrap;
   padding: 0;
   margin-bottom: 0;
 
